// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FAB with custom size prop 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 25,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 25,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 25,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 25,
              "height": 100,
              "width": 100,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 50,
                "width": 50,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 50,
                  },
                  [
                    {
                      "lineHeight": 50,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders custom color for the icon and label of the FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 16,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 16,
              "height": 56,
              "width": 56,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "#AA0114",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders default FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 16,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 16,
              "height": 56,
              "width": 56,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders disabled FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(28, 27, 31, 0.12)",
      "borderRadius": 16,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 0.12)",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 16,
              "height": 56,
              "width": 56,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(28, 27, 31, 0.38)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders extended FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 16,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityLabel="Add items"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 16,
              "height": 56,
              "paddingHorizontal": 16,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
        <Text
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginHorizontal": 8,
                  },
                  false,
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                ],
              ],
            ]
          }
          testID="fab-text"
        >
          Add items
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders extended FAB with custom size prop 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 25,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 25,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityLabel="Add items"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 25,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "height": 100,
              "paddingHorizontal": 16,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 50,
                "width": 50,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 50,
                  },
                  [
                    {
                      "lineHeight": 50,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
        <Text
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginHorizontal": 8,
                  },
                  false,
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                ],
              ],
            ]
          }
          testID="fab-text"
        >
          Add items
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders large FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 28,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 28,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 28,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 28,
              "height": 96,
              "width": 96,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 36,
                "width": 36,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 36,
                  },
                  [
                    {
                      "lineHeight": 36,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders loading FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 16,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 16,
              "height": 56,
              "width": 56,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          accessibilityRole="progressbar"
          accessibilityState={
            {
              "busy": true,
            }
          }
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 18,
                "opacity": 1,
                "width": 18,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 18,
                    "transform": [
                      {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 18,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 9,
                      "overflow": "hidden",
                      "width": 18,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 18,
                        "transform": [
                          {
                            "translateY": 0,
                          },
                          {
                            "rotate": "-165deg",
                          },
                        ],
                        "width": 18,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 9,
                          "overflow": "hidden",
                          "width": 18,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "rgba(33, 0, 93, 1)",
                            "borderRadius": 9,
                            "borderWidth": 1.8,
                            "height": 18,
                            "width": 18,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 18,
                    "transform": [
                      {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 18,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 9,
                      "overflow": "hidden",
                      "top": 9,
                      "width": 18,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 18,
                        "transform": [
                          {
                            "translateY": -9,
                          },
                          {
                            "rotate": "345deg",
                          },
                        ],
                        "width": 18,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 9,
                          "overflow": "hidden",
                          "width": 18,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "rgba(33, 0, 93, 1)",
                            "borderRadius": 9,
                            "borderWidth": 1.8,
                            "height": 18,
                            "width": 18,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders loading FAB with custom size prop 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 25,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 25,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 25,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 25,
              "height": 100,
              "width": 100,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          accessibilityRole="progressbar"
          accessibilityState={
            {
              "busy": true,
            }
          }
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 50,
                "opacity": 1,
                "width": 50,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 50,
                    "transform": [
                      {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 50,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 25,
                      "overflow": "hidden",
                      "width": 50,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 50,
                        "transform": [
                          {
                            "translateY": 0,
                          },
                          {
                            "rotate": "-165deg",
                          },
                        ],
                        "width": 50,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 25,
                          "overflow": "hidden",
                          "width": 50,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "rgba(33, 0, 93, 1)",
                            "borderRadius": 25,
                            "borderWidth": 5,
                            "height": 50,
                            "width": 50,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 50,
                    "transform": [
                      {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 50,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 25,
                      "overflow": "hidden",
                      "top": 25,
                      "width": 50,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 50,
                        "transform": [
                          {
                            "translateY": -25,
                          },
                          {
                            "rotate": "345deg",
                          },
                        ],
                        "width": 50,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "height": 25,
                          "overflow": "hidden",
                          "width": 50,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          {
                            "borderColor": "rgba(33, 0, 93, 1)",
                            "borderRadius": 25,
                            "borderWidth": 5,
                            "height": 50,
                            "width": 50,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders not visible FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 16,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 16,
              "height": 56,
              "width": 56,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders small FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 12,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 12,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 12,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 12,
              "height": 40,
              "width": 40,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(234, 221, 255, 1)",
      "borderRadius": 16,
      "opacity": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "transform": [
        {
          "scale": 0,
        },
      ],
    }
  }
  testID="fab-container-outer-layer"
>
  <View
    accessible={true}
    collapsable={false}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "rgba(234, 221, 255, 1)",
        "borderRadius": 16,
        "flex": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
    testID="fab-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="fab"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "borderRadius": 16,
              "height": 56,
              "width": 56,
            },
          ]
        }
        testID="fab-content"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              }
            }
            testID="cross-fade-icon-current"
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(33, 0, 93, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰐕
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
